tests/golden/errors/unused_expression.kso
main =
  1 + 1
  print "hi"
