tests/golden/errors/unused_expression.stderr
error[unused]: unused expression: every non-final line binds a name (sequence effects with `>>`)
  --> unused_expression.kso:2:5
   2 |   1 + 1
           ^
